# arcolyte

./: .Cargo.toml.swp  .gitignore  Cargo.toml  README.md  build.rs  buildrust.sh
.github/workflows/: rust.yml
examples/: errordemo.rs
src/: .arrowz.rs.swp  .utils.rs.swp  arrowz.rs  callbacks.rs  errors.rs  ffi.rs  lib.rs  plugins.rs  request.rs  response.rs  send_request.rs  utils.rs
test/: testarcolyte.rs
