[package]
name = "arcolyte"
version = "1.0.0"
authors = ["Parquette"]
edition = "2018"

build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
cbindgen = "0.16.0"
wasm-bindgen = "0.2.70"

[dev-dependencies]
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.61"

[dependencies]
arrow = { version = "3.0.0", features = ["prettyprint"] }
datafusion = "3.0.0"
parquet = { version = "3.0.0", features = ["arrow"] }

chrono = "0.4.19"
# cookie = "0.14.3"
env_logger = "0.8.2"

error-chain = "0.12.4"

fern = "0.4.3"

# http = "0.2.3"
libc = "0.2.84"

libloading = "0.4.2"

log = "0.3.8"

# reqwest = "0.8.0"


# serde_derive
# serde = { version = "1.0", features = ["rc", "derive"] }
# serde_derive = "1.0"
# serde_json = { version = "1.0", features = ["preserve_order"] }

futures = "0.3.12"

# tokio = { version = "1.1.1", features = ["time", "macros", "rt-threaded"] }
# tokio = "1.1.1"
tokio = {version = "0.2.13", features = ["rt-core"]}
